--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -4,65 +4,77 @@ body {
     margin : 0;
 }
 
-#container {
-    top     : 50px;
-    width   : 500px;
-    margin  : 0 auto;
-    display : block;
-    position: relative;
+html,
+body,
+input,
+button {
+    font-family: LiHeiPro, Microsoft JhengHei, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji !important;
+    ;
 }
 
-#status-box {
-    text-align: right;
-    font-size : .6em;
+img {
+    max-width: 100%;
 }
 
-#content {
-    width        : 100%;
-    height       : 350px;
-    border       : 1px solid darkolivegreen;
-    border-radius: 5px;
-    overflow     : auto;
+.index {
+    width           : 100%;
+    min-height      : 100vh;
+    display         : flex;
+    justify-content : center;
+    align-items     : center;
+    background-color: #faf11a;
 }
 
-#send-box {
-    width     : 100%;
-    text-align: center;
+.index-container {
+    display        : flex;
+    justify-content: center;
+    align-items    : center;
+    flex-direction : column;
+    ;
 }
 
-#send-box input {
-    display: inline-block;
+.login-div {
+    width           : 60%;
+    max-width       : 300px;
+    display         : flex;
+    justify-content : center;
+    align-items     : center;
+    background-color: #bebcc2;
+    padding         : 60px 10px;
+    margin          : 0 auto;
+    border-radius   : 12px;
 }
 
-input[name="name"] {
-    width: 15%;
+.login-div>form {
+    display        : flex;
+    justify-content: center;
+    align-items    : center;
+    flex-direction : column;
 }
 
-input[name="msg"] {
-    width: 70%;
+.login-div span {
+    font-size  : 18px;
+    font-weight: bold;
 }
 
-input[type="button"] {
-    width: 10%;
+#login-form input[type="text"] {
+    border          : none;
+    border-radius   : 6px;
+    padding         : 4px 5px;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
-.msg {
-    width  : 73%;
-    display: inline-block;
-    padding: 5px 0 5px 10px;
+#login-form button {
+    border          : none;
+    border-radius   : 6px;
+    background-color: #faf11a;
+    color           : black;
+    font-weight     : bold;
+    padding         : 6px 10px;
+    margin-top      : 25px;
+    cursor          : pointer;
 }
 
-.msg>span {
-    width  : 25%;
-    display: inline-block;
-}
-
-.msg>span::before {
-    color  : darkred;
-    content: " { ";
-}
-
-.msg>span::after {
-    color  : darkred;
-    content: " } ";
+#login-form button:hover {
+    background-color: #e7e00e;
 }
