--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -12,69 +12,54 @@ button {
     ;
 }
 
+button:focus,
+input:focus {
+    outline: none;
+}
+
+button {
+    cursor: pointer;
+}
+
 img {
     max-width: 100%;
 }
 
-.index {
-    width           : 100%;
-    min-height      : 100vh;
-    display         : flex;
-    justify-content : center;
-    align-items     : center;
-    background-color: #faf11a;
+.container {
+    width                                             : 100%;
+    min-height                                        : 100vh;
+    display                                           : flex;
+    justify-content                                   : center;
+    align-items                                       : center;
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#faf11a+0,f7ed33+37,f7f180+80,ffffff+100 */
+    background                                        : #faf11a;
+    /* Old browsers */
+    background: -moz-linear-gradient(top, #faf11a 0%, #f7ed33 37%, #f7f180 80%, #ffffff 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #faf11a 0%, #f7ed33 37%, #f7f180 80%, #ffffff 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #faf11a 0%, #f7ed33 37%, #f7f180 80%, #ffffff 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#faf11a', endColorstr='#ffffff', GradientType=0);
+    /* IE6-9 */
 }
 
-.index-container {
-    display        : flex;
-    justify-content: center;
-    align-items    : center;
-    flex-direction : column;
-    ;
+.custom-scrollbar::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
 }
 
-.login-div {
-    width           : 60%;
-    max-width       : 300px;
-    display         : flex;
-    justify-content : center;
-    align-items     : center;
-    background-color: #bebcc2;
-    padding         : 60px 10px;
-    margin          : 0 auto;
-    border-radius   : 12px;
+.custom-scrollbar::-webkit-scrollbar
+{
+	width: 8px;
+	background-color: #F5F5F5;
 }
 
-.login-div>form {
-    display        : flex;
-    justify-content: center;
-    align-items    : center;
-    flex-direction : column;
-}
-
-.login-div span {
-    font-size  : 18px;
-    font-weight: bold;
-}
-
-#login-form input[type="text"] {
-    border          : none;
-    border-radius   : 6px;
-    padding         : 4px 5px;
-    background-color: rgba(255, 255, 255, 0.8);
-}
-
-#login-form button {
-    border          : none;
-    border-radius   : 6px;
-    background-color: #faf11a;
-    color           : black;
-    font-weight     : bold;
-    padding         : 6px 10px;
-    margin-top      : 25px;
-    cursor          : pointer;
-}
-
-#login-form button:hover {
-    background-color: #e7e00e;
+.custom-scrollbar::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
 }
